@@ -1,3 +1,8 @@
+2010-11-04  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/fgraph.php: Do not propagate compressed data to dates in the
+	  future in any charts.
+
 2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* include/functions_db.php: in function __ fixed when the Pandora don't
